Создает разметку страницы Портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -28,30 +28,85 @@
     </header>
 
     <main>
-        <section>
-            <h2>Фильтры портфолио</h2>
-            <ul>
-                <li><a href="">Все</a></li>
-                <li><a href="">Веб-сайты</a></li>
-                <li><a href="">Приложения</a></li>
-                <li><a href="">Дизайн</a></li>
-                <li><a href="">Маркетинг</a></li>
-            </ul>
-        </section>
+      <section>
+        <h2>Фильтры портфолио</h2>
+        <ul>
+          <li><a href="">Все</a></li>
+          <li><a href="">Веб-сайты</a></li>
+          <li><a href="">Приложения</a></li>
+          <li><a href="">Дизайн</a></li>
+          <li><a href="">Маркетинг</a></li>
+        </ul>
+      </section>
 
-        <section>
-            <ul>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-            </ul>
-        </section>
+      <section>
+        <h2>Работы портфолио</h2>
+        <ul>
+          <li>
+            <a href="">
+              <img src="./images/portfolio-1.jpg" alt="Изображение страницы сайта на ноутбуке" width="370" />
+              <h3>Технокряк</h3>
+              <p>Веб-сайт</p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/portfolio-2.jpg" alt="Постер с изображением соперничающих за мяч баскетболистов" width="370" />
+              <h3>Постер <span lang="en">New Orlean vs Golden Star</span></h3>
+              <p>Дизайн</p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/portfolio-3.jpg" alt="Логотип ресторана Сеафуд" width="370" />
+              <h3>Ресторан <span lang="en">Seafood</span></h3>
+              <p>Приложение</p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/portfolio-4.jpg" alt="Наушники" width="370" />
+              <h3>Проект <span lang="en">Prime</span></h3>
+              <p>Маркетинг</p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/portfolio-5.jpg" alt="Две упаковочные коробки" width="370" />
+              <h3>Проект <span lang="en">Boxes</span></h3>
+              <p>Приложение</p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/portfolio-6.jpg" alt="Изображение сайта с черным фоном и белыми буквами на эране монитора" width="370" />
+              <h3 lang="en">Inspiration has no Borders</h3>
+              <p>Веб-сайт</p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/portfolio-7.jpg" alt="Раскрытая книга с иллюстрациями" width="370" />
+              <h3>Издание <span lang="en">Limited Edition</span></h3>
+              <p>Дизайн</p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/portfolio-8.jpg" alt="Лэйба с логотипом компании ЛАБ" width="370" />
+              <h3>Проект <span lang="en">LAB</span></h3>
+              <p>Маркетинг</p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/portfolio-9.jpg" alt="Работа с приложением Гровин Бизнес на ноутбуке" width="370" />
+              <h3 lang="en">Growing Business</h3>
+              <p>Приложение</p>
+            </a>
+          </li>
+        </ul>
+      </section>
     </main>
 
     <footer>
