--- a/index.html
+++ b/index.html
@@ -4,70 +4,78 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>HTML+CSS. Домашнее задание 1</title>
   </head>
+
   <body>
     <header>
       <!-- Логотип -->
-      <a href="./index.html">WebStudio</a>
+      <a href="./index.html" class="logo">Web<span class="logo-black">Studio</span></a>
 
       <!-- Навигация по сайту -->
       <nav>
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <ul class="site-nav list">
+          <li><a href="" class="nav" >Студия</a></li>
+          <li><a href="" class="nav" >Портфолио</a></li>
+          <li><a href="" class="nav" >Контакты</a></li>
         </ul>
       </nav>
 
       <!-- Контакты для связи -->
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="list">
+        <li><a href="mailto:info@devstudio.com" class="header-mail">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111" class="header-phone">+38 096 111 11 11</a></li>
       </ul>
     </header>
 
     <main>
       <!-- Секция Hero -->
-      <section>
-        <h1>
+      <section class="section-hero">
+        <h1 class="title-hero">
           Эффективные решения<br />
           для вашего бизнеса
         </h1>
-        <button type="button">Заказать услугу</button>
+        <button type="button" class="button">Заказать услугу</button>
       </section>
 
       <!-- Секция преимущества -->
       <section>
-        <h2>Наши преимущества</h2>
-        <ul>
+        <h2 class="hidden">Наши преимущества</h2>
+        <ul class="function list">
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            <h3 class="function-subtitle">Внимание к деталям</h3>
+            <p class="function-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
-            <p>
+            <h3 class="function-subtitle">Пунктуальность</h3>
+            <p class="function-text">
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
-            <p>
+            <h3 class="function-subtitle">Планирование</h3>
+            <p class="function-text">
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
-            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            <h3 class="function-subtitle">Современные технологии</h3>
+            <p class="function-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
           </li>
         </ul>
       </section>
 
       <!-- Секция услуги компании -->
       <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
+        <h2 class="development-title">Чем мы занимаемся</h2>
+        <ul class="list">
           <li>
             <img src="./images/service-1.jpg" alt="Разработка десктопных приложений" width="370" />
           </li>
@@ -82,50 +90,51 @@
 
       <!-- Секция Наша команда -->
       <section>
-        <h2>Наша команда</h2>
-        <ul>
+        <h2 class="team-title">Наша команда</h2>
+        <ul class="list">
           <li>
             <img src="./images/team-member-1.jpg" alt="Игорь Демьяненко" width="270" />
-            <h3>Игорь Демьяненко</h3>
-            <p lang="en">Product Designer</p>
+            <h3 class="team-name">Игорь Демьяненко</h3>
+            <p lang="en" class="team-function">Product Designer</p>
           </li>
           <li>
             <img src="./images/team-member-2.jpg" alt="Ольга Репина" width="270" />
-            <h3>Ольга Репина</h3>
-            <p lang="en">Frontend Developer</p>
+            <h3 class="team-name">Ольга Репина</h3>
+            <p lang="en" class="team-function">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/team-member-3.jpg" alt="Николай Тарасов" width="270" />
-            <h3>Николай Тарасов</h3>
-            <p lang="en">Marketing</p>
+            <h3 class="team-name">Николай Тарасов</h3>
+            <p lang="en" class="team-function">Marketing</p>
           </li>
           <li>
             <img src="./images/team-member-4.jpg" alt="Михаил Ермаков" width="270" />
-            <h3>Михаил Ермаков</h3>
-            <p lang="en">UI Designer</p>
+            <h3 class="team-name">Михаил Ермаков</h3>
+            <p lang="en" class="team-function">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
+    <footer class="footer">
       <!-- Логотип в footer -->
-      <a href="./index.html">WebStudio</a>
+      <a href="./index.html" class="logo">Web<span class="logo-white">Studio</span></a>
 
       <!-- Адрес и контакты -->
       <address>
-        <ul>
+        <ul class="list">
           <li>
             <a
               href="https://goo.gl/maps/hZ6GG7BoJjNdGrGMA"
               target="_blank"
               rel="noopener noreferrer"
+              class="adress"
             >
               г. Киев, пр-т Леси Украинки, 26
             </a>
           </li>
-          <li><a href="mailto:info@example.com">info@example.com</a></li>
-          <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+          <li><a href="mailto:info@example.com" class="footer-mail">info@example.com</a></li>
+          <li><a href="tel:+380991111111" class="footer-phone">+38 099 111 11 11</a></li>
         </ul>
       </address>
     </footer>
