Оформляет интерактивное меню портфолио

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       <!-- Навигация по сайту -->
       <nav>
         <ul class="site-nav list">
-          <li><a href="" class="nav" >Студия</a></li>
-          <li><a href="" class="nav" >Портфолио</a></li>
-          <li><a href="" class="nav" >Контакты</a></li>
+          <li><a href="" class="nav">Студия</a></li>
+          <li><a href="" class="nav">Портфолио</a></li>
+          <li><a href="" class="nav">Контакты</a></li>
         </ul>
       </nav>
 
@@ -51,7 +51,9 @@
         <ul class="function list">
           <li>
             <h3 class="function-subtitle">Внимание к деталям</h3>
-            <p class="function-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            <p class="function-text">
+              Идейные соображения, а также начало повседневной работы по формированию позиции.
+            </p>
           </li>
           <li>
             <h3 class="function-subtitle">Пунктуальность</h3>
@@ -67,7 +69,9 @@
           </li>
           <li>
             <h3 class="function-subtitle">Современные технологии</h3>
-            <p class="function-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            <p class="function-text">
+              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+            </p>
           </li>
         </ul>
       </section>
