Оформление списка Портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
         <h2 class="hidden">Работы портфолио</h2>
         <ul class="list">
           <li>
-            <a href="">
+            <a href="" class="portfolio">
               <img
                 src="./images/portfolio-1.jpg"
                 alt="Изображение страницы сайта на ноутбуке"
@@ -55,7 +55,7 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="portfolio">
               <img
                 src="./images/portfolio-2.jpg"
                 alt="Постер с изображением соперничающих за мяч баскетболистов"
@@ -66,28 +66,28 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="portfolio">
               <img src="./images/portfolio-3.jpg" alt="Логотип ресторана Сеафуд" width="370" />
               <h3>Ресторан <span lang="en">Seafood</span></h3>
               <p>Приложение</p>
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="portfolio">
               <img src="./images/portfolio-4.jpg" alt="Наушники" width="370" />
               <h3>Проект <span lang="en">Prime</span></h3>
               <p>Маркетинг</p>
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="portfolio">
               <img src="./images/portfolio-5.jpg" alt="Две упаковочные коробки" width="370" />
               <h3>Проект <span lang="en">Boxes</span></h3>
               <p>Приложение</p>
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="portfolio">
               <img
                 src="./images/portfolio-6.jpg"
                 alt="Изображение сайта с черным фоном и белыми буквами на эране монитора"
@@ -98,7 +98,7 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="portfolio">
               <img
                 src="./images/portfolio-7.jpg"
                 alt="Раскрытая книга с иллюстрациями"
@@ -109,7 +109,7 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="portfolio">
               <img
                 src="./images/portfolio-8.jpg"
                 alt="Лэйба с логотипом компании ЛАБ"
@@ -120,7 +120,7 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="portfolio">
               <img
                 src="./images/portfolio-9.jpg"
                 alt="Работа с приложением Гровин Бизнес на ноутбуке"
