Прописывает ссылки в навигации

--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
       <nav>
         <ul class="site-nav list">
           <li><a href="" class="nav">Студия</a></li>
-          <li><a href="" class="nav">Портфолио</a></li>
+          <li><a href="./portfolio.html" class="nav">Портфолио</a></li>
           <li><a href="" class="nav">Контакты</a></li>
         </ul>
       </nav>
