Переназывает классы шапки

--- a/index.html
+++ b/index.html
@@ -22,16 +22,22 @@
       <!-- Навигация по сайту -->
       <nav>
         <ul class="site-nav list">
-          <li><a href="" class="nav">Студия</a></li>
-          <li><a href="./portfolio.html" class="nav">Портфолио</a></li>
-          <li><a href="" class="nav">Контакты</a></li>
+          <li class="site-nav-item">
+            <a href="" class="site-nav-link">Студия</a>
+          </li>
+          <li class="site-nav-item">
+            <a href="./portfolio.html" class="site-nav-link"">Портфолио</a>
+          </li>
+          <li class="site-nav-item">
+            <a href="" class="site-nav-link"">Контакты</a>
+          </li>
         </ul>
       </nav>
 
       <!-- Контакты для связи -->
-      <ul class="list">
-        <li><a href="mailto:info@devstudio.com" class="header-mail">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111" class="header-phone">+38 096 111 11 11</a></li>
+      <ul class="contacts list">
+        <li class="contacts-item"><a href="mailto:info@devstudio.com" class="contacts-link">info@devstudio.com</a></li>
+        <li class="contacts-item"><a href="tel:+380961111111" class="contacts-link">+38 096 111 11 11</a></li>
       </ul>
     </header>
 
