Переназывает классы тега main в index.html

--- a/index.html
+++ b/index.html
@@ -55,25 +55,25 @@
       <section>
         <h2 class="hidden">Наши преимущества</h2>
         <ul class="function list">
-          <li>
+          <li class="function-item">
             <h3 class="function-subtitle">Внимание к деталям</h3>
             <p class="function-text">
               Идейные соображения, а также начало повседневной работы по формированию позиции.
             </p>
           </li>
-          <li>
+          <li class="function-item">
             <h3 class="function-subtitle">Пунктуальность</h3>
             <p class="function-text">
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
-          <li>
+          <li class="function-item">
             <h3 class="function-subtitle">Планирование</h3>
             <p class="function-text">
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
-          <li>
+          <li class="function-item">
             <h3 class="function-subtitle">Современные технологии</h3>
             <p class="function-text">
               Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -85,14 +85,14 @@
       <!-- Секция услуги компании -->
       <section>
         <h2 class="development-title">Чем мы занимаемся</h2>
-        <ul class="list">
-          <li>
+        <ul class="development list">
+          <li class="development-item">
             <img src="./images/service-1.jpg" alt="Разработка десктопных приложений" width="370" />
           </li>
-          <li>
+          <li class="development-item">
             <img src="./images/service-2.jpg" alt="Разработка мобильных приложений" width="370" />
           </li>
-          <li>
+          <li class="development-item">
             <img src="./images/service-3.jpg" alt="Разработка планшетных приложений" width="370" />
           </li>
         </ul>
@@ -101,26 +101,26 @@
       <!-- Секция Наша команда -->
       <section>
         <h2 class="team-title">Наша команда</h2>
-        <ul class="list">
-          <li>
+        <ul class="team list">
+          <li class="team-item">
             <img src="./images/team-member-1.jpg" alt="Игорь Демьяненко" width="270" />
-            <h3 class="team-name">Игорь Демьяненко</h3>
-            <p lang="en" class="team-function">Product Designer</p>
+            <h3 class="team-subtitle">Игорь Демьяненко</h3>
+            <p lang="en" class="team-text">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/team-member-2.jpg" alt="Ольга Репина" width="270" />
-            <h3 class="team-name">Ольга Репина</h3>
-            <p lang="en" class="team-function">Frontend Developer</p>
+            <h3 class="team-subtitle">Ольга Репина</h3>
+            <p lang="en" class="team-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/team-member-3.jpg" alt="Николай Тарасов" width="270" />
-            <h3 class="team-name">Николай Тарасов</h3>
-            <p lang="en" class="team-function">Marketing</p>
+            <h3 class="team-subtitle">Николай Тарасов</h3>
+            <p lang="en" class="team-text">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/team-member-4.jpg" alt="Михаил Ермаков" width="270" />
-            <h3 class="team-name">Михаил Ермаков</h3>
-            <p lang="en" class="team-function">UI Designer</p>
+            <h3 class="team-subtitle">Михаил Ермаков</h3>
+            <p lang="en" class="team-text">UI Designer</p>
           </li>
         </ul>
       </section>
