--- a/portfolio.html
+++ b/portfolio.html
@@ -41,12 +41,12 @@
     <main>
       <section>
         <h2 class="hidden">Фильтры портфолио</h2>
-        <ul class="list">
-          <li><button type="button" class="button-portfolio">Все</button></li>
-          <li><button type="button" class="button-portfolio">Веб-сайты</button></li>
-          <li><button type="button" class="button-portfolio">Приложения</button></li>
-          <li><button type="button" class="button-portfolio">Дизайн</button></li>
-          <li><button type="button" class="button-portfolio">Маркетинг</button></li>
+        <ul class="filter list">
+          <li class="filter-item"><button type="button" class="filter-button">Все</button></li>
+          <li class="filter-item"><button type="button" class="filter-button">Веб-сайты</button></li>
+          <li class="filter-item"><button type="button" class="filter-button">Приложения</button></li>
+          <li class="filter-item"><button type="button" class="filter-button">Дизайн</button></li>
+          <li class="filter-item"><button type="button" class="filter-button">Маркетинг</button></li>
         </ul>
       </section>
 
