--- a/index.html
+++ b/index.html
@@ -132,19 +132,19 @@
 
       <!-- Адрес и контакты -->
       <address>
-        <ul class="list">
-          <li>
+        <ul class="address list">
+          <li class="address-item">
             <a
               href="https://goo.gl/maps/hZ6GG7BoJjNdGrGMA"
               target="_blank"
               rel="noopener noreferrer"
-              class="adress"
+              class="address-link"
             >
               г. Киев, пр-т Леси Украинки, 26
             </a>
           </li>
-          <li><a href="mailto:info@example.com" class="footer-mail">info@example.com</a></li>
-          <li><a href="tel:+380991111111" class="footer-phone">+38 099 111 11 11</a></li>
+          <li class="address-item"><a href="mailto:info@example.com" class="address-link mail">info@example.com</a></li>
+          <li class="address-item"><a href="tel:+380991111111" class="address-link phone">+38 099 111 11 11</a></li>
         </ul>
       </address>
     </footer>
