--- a/portfolio.html
+++ b/portfolio.html
@@ -147,22 +147,17 @@
     <footer class="footer">
       <!-- Логотип в footer -->
       <a href="./index.html" class="logo">Web<span class="logo-white">Studio</span></a>
-
+    
       <!-- Адрес и контакты -->
       <address>
-        <ul class="list">
-          <li>
-            <a
-              href="https://goo.gl/maps/hZ6GG7BoJjNdGrGMA"
-              target="_blank"
-              rel="noopener noreferrer"
-              class="adress"
-            >
+        <ul class="address list">
+          <li class="address-item">
+            <a href="https://goo.gl/maps/hZ6GG7BoJjNdGrGMA" target="_blank" rel="noopener noreferrer" class="address-link">
               г. Киев, пр-т Леси Украинки, 26
             </a>
           </li>
-          <li><a href="mailto:info@example.com" class="footer-mail">info@example.com</a></li>
-          <li><a href="tel:+380991111111" class="footer-phone">+38 099 111 11 11</a></li>
+          <li class="address-item"><a href="mailto:info@example.com" class="address-link mail">info@example.com</a></li>
+          <li class="address-item"><a href="tel:+380991111111" class="address-link phone">+38 099 111 11 11</a></li>
         </ul>
       </address>
     </footer>
