Переназывает селекторы классов тега main в portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
     </header>
 
     <main>
-      <section>
+
         <h2 class="hidden">Фильтры портфолио</h2>
         <ul class="filter list">
           <li class="filter-item"><button type="button" class="filter-button">Все</button></li>
@@ -48,100 +48,97 @@
           <li class="filter-item"><button type="button" class="filter-button">Дизайн</button></li>
           <li class="filter-item"><button type="button" class="filter-button">Маркетинг</button></li>
         </ul>
-      </section>
+      
 
-      <section>
-        <h2 class="hidden">Работы портфолио</h2>
-        <ul class="list">
-          <li>
-            <a href="" class="portfolio">
+        <ul class="portfolio list">
+          <li class="portfolio-item">
+            <a href="" class="portfolio-link">
               <img
                 src="./images/portfolio-1.jpg"
                 alt="Изображение страницы сайта на ноутбуке"
                 width="370"
               />
-              <h3>Технокряк</h3>
+              <h2>Технокряк</h2>
               <p>Веб-сайт</p>
             </a>
           </li>
-          <li>
-            <a href="" class="portfolio">
+          <li class="portfolio-item">
+            <a href="" class="portfolio-link">
               <img
                 src="./images/portfolio-2.jpg"
                 alt="Постер с изображением соперничающих за мяч баскетболистов"
                 width="370"
               />
-              <h3>Постер <span lang="en">New Orlean vs Golden Star</span></h3>
+              <h2>Постер <span lang="en">New Orlean vs Golden Star</span></h2>
               <p>Дизайн</p>
             </a>
           </li>
-          <li>
-            <a href="" class="portfolio">
+          <li class="portfolio-item">
+            <a href="" class="portfolio-link">
               <img src="./images/portfolio-3.jpg" alt="Логотип ресторана Сеафуд" width="370" />
-              <h3>Ресторан <span lang="en">Seafood</span></h3>
+              <h2>Ресторан <span lang="en">Seafood</span></h2>
               <p>Приложение</p>
             </a>
           </li>
-          <li>
-            <a href="" class="portfolio">
+          <li class="portfolio-item">
+            <a href="" class="portfolio-link">
               <img src="./images/portfolio-4.jpg" alt="Наушники" width="370" />
-              <h3>Проект <span lang="en">Prime</span></h3>
+              <h2>Проект <span lang="en">Prime</span></h2>
               <p>Маркетинг</p>
             </a>
           </li>
-          <li>
-            <a href="" class="portfolio">
+          <li class="portfolio-item">
+            <a href="" class="portfolio-link">
               <img src="./images/portfolio-5.jpg" alt="Две упаковочные коробки" width="370" />
-              <h3>Проект <span lang="en">Boxes</span></h3>
+              <h2>Проект <span lang="en">Boxes</span></h2>
               <p>Приложение</p>
             </a>
           </li>
-          <li>
-            <a href="" class="portfolio">
+          <li class="portfolio-item">
+            <a href="" class="portfolio-link">
               <img
                 src="./images/portfolio-6.jpg"
                 alt="Изображение сайта с черным фоном и белыми буквами на эране монитора"
                 width="370"
               />
-              <h3 lang="en">Inspiration has no Borders</h3>
+              <h2 lang="en">Inspiration has no Borders</h2>
               <p>Веб-сайт</p>
             </a>
           </li>
-          <li>
-            <a href="" class="portfolio">
+          <li class="portfolio-item">
+            <a href="" class="portfolio-link">
               <img
                 src="./images/portfolio-7.jpg"
                 alt="Раскрытая книга с иллюстрациями"
                 width="370"
               />
-              <h3>Издание <span lang="en">Limited Edition</span></h3>
+              <h2>Издание <span lang="en">Limited Edition</span></h2>
               <p>Дизайн</p>
             </a>
           </li>
-          <li>
-            <a href="" class="portfolio">
+          <li class="portfolio-item">
+            <a href="" class="portfolio-link">
               <img
                 src="./images/portfolio-8.jpg"
                 alt="Лэйба с логотипом компании ЛАБ"
                 width="370"
               />
-              <h3>Проект <span lang="en">LAB</span></h3>
+              <h2>Проект <span lang="en">LAB</span></h2>
               <p>Маркетинг</p>
             </a>
           </li>
-          <li>
-            <a href="" class="portfolio">
+          <li class="portfolio-item">
+            <a href="" class="portfolio-link">
               <img
                 src="./images/portfolio-9.jpg"
                 alt="Работа с приложением Гровин Бизнес на ноутбуке"
                 width="370"
               />
-              <h3 lang="en">Growing Business</h3>
+              <h2 lang="en">Growing Business</h2>
               <p>Приложение</p>
             </a>
           </li>
         </ul>
-      </section>
     </main>
 
     <footer class="footer">
