--- a/index.html
+++ b/index.html
@@ -26,18 +26,22 @@
             <a href="" class="site-nav-link">Студия</a>
           </li>
           <li class="site-nav-item">
-            <a href="./portfolio.html" class="site-nav-link"">Портфолио</a>
+            <a href="./portfolio.html" class="site-nav-link">Портфолио</a>
           </li>
           <li class="site-nav-item">
-            <a href="" class="site-nav-link"">Контакты</a>
+            <a href="" class="site-nav-link">Контакты</a>
           </li>
         </ul>
       </nav>
 
       <!-- Контакты для связи -->
       <ul class="contacts list">
-        <li class="contacts-item"><a href="mailto:info@devstudio.com" class="contacts-link">info@devstudio.com</a></li>
-        <li class="contacts-item"><a href="tel:+380961111111" class="contacts-link">+38 096 111 11 11</a></li>
+        <li class="contacts-item">
+          <a href="mailto:info@devstudio.com" class="contacts-link">info@devstudio.com</a>
+        </li>
+        <li class="contacts-item">
+          <a href="tel:+380961111111" class="contacts-link">+38 096 111 11 11</a>
+        </li>
       </ul>
     </header>
 
@@ -143,8 +147,12 @@
               г. Киев, пр-т Леси Украинки, 26
             </a>
           </li>
-          <li class="address-item"><a href="mailto:info@example.com" class="address-link mail">info@example.com</a></li>
-          <li class="address-item"><a href="tel:+380991111111" class="address-link phone">+38 099 111 11 11</a></li>
+          <li class="address-item">
+            <a href="mailto:info@example.com" class="address-link mail">info@example.com</a>
+          </li>
+          <li class="address-item">
+            <a href="tel:+380991111111" class="address-link phone">+38 099 111 11 11</a>
+          </li>
         </ul>
       </address>
     </footer>
