Переопределяет свойство font-family: inherit для кнопок

--- a/portfolio.html
+++ b/portfolio.html
@@ -70,8 +70,8 @@
                 alt="Изображение страницы сайта на ноутбуке"
                 width="370"
               />
-              <h2>Технокряк</h2>
-              <p>Веб-сайт</p>
+              <h2 class="portfolio-title">Технокряк</h2>
+              <p class="portfolio-text">Веб-сайт</p>
             </a>
           </li>
           <li class="portfolio-item">
@@ -81,29 +81,29 @@
                 alt="Постер с изображением соперничающих за мяч баскетболистов"
                 width="370"
               />
-              <h2>Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-              <p>Дизайн</p>
+              <h2 class="portfolio-title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+              <p class="portfolio-text">Дизайн</p>
             </a>
           </li>
           <li class="portfolio-item">
             <a href="" class="portfolio-link">
               <img src="./images/portfolio-3.jpg" alt="Логотип ресторана Сеафуд" width="370" />
-              <h2>Ресторан <span lang="en">Seafood</span></h2>
-              <p>Приложение</p>
+              <h2 class="portfolio-title">Ресторан <span lang="en">Seafood</span></h2>
+              <p class="portfolio-text">Приложение</p>
             </a>
           </li>
           <li class="portfolio-item">
             <a href="" class="portfolio-link">
               <img src="./images/portfolio-4.jpg" alt="Наушники" width="370" />
-              <h2>Проект <span lang="en">Prime</span></h2>
-              <p>Маркетинг</p>
+              <h2 class="portfolio-title">Проект <span lang="en">Prime</span></h2>
+              <p class="portfolio-text">Маркетинг</p>
             </a>
           </li>
           <li class="portfolio-item">
             <a href="" class="portfolio-link">
               <img src="./images/portfolio-5.jpg" alt="Две упаковочные коробки" width="370" />
-              <h2>Проект <span lang="en">Boxes</span></h2>
-              <p>Приложение</p>
+              <h2 class="portfolio-title">Проект <span lang="en">Boxes</span></h2>
+              <p class="portfolio-text">Приложение</p>
             </a>
           </li>
           <li class="portfolio-item">
@@ -113,8 +113,8 @@
                 alt="Изображение сайта с черным фоном и белыми буквами на эране монитора"
                 width="370"
               />
-              <h2 lang="en">Inspiration has no Borders</h2>
-              <p>Веб-сайт</p>
+              <h2 lang="en" class="portfolio-title">Inspiration has no Borders</h2>
+              <p class="portfolio-text">Веб-сайт</p>
             </a>
           </li>
           <li class="portfolio-item">
@@ -124,8 +124,8 @@
                 alt="Раскрытая книга с иллюстрациями"
                 width="370"
               />
-              <h2>Издание <span lang="en">Limited Edition</span></h2>
-              <p>Дизайн</p>
+              <h2 class="portfolio-title">Издание <span lang="en">Limited Edition</span></h2>
+              <p class="portfolio-text">Дизайн</p>
             </a>
           </li>
           <li class="portfolio-item">
@@ -135,8 +135,8 @@
                 alt="Лэйба с логотипом компании ЛАБ"
                 width="370"
               />
-              <h2>Проект <span lang="en">LAB</span></h2>
-              <p>Маркетинг</p>
+              <h2 class="portfolio-title">Проект <span lang="en">LAB</span></h2>
+              <p class="portfolio-text">Маркетинг</p>
             </a>
           </li>
           <li class="portfolio-item">
@@ -146,8 +146,8 @@
                 alt="Работа с приложением Гровин Бизнес на ноутбуке"
                 width="370"
               />
-              <h2 lang="en">Growing Business</h2>
-              <p>Приложение</p>
+              <h2 lang="en" class="portfolio-title">Growing Business</h2>
+              <p class="portfolio-text">Приложение</p>
             </a>
           </li>
         </ul>
